OldArchive/2cb19137f12b5244a75185b6dc304028-bb452bed83d06e87c370fcabced7e96d/output
+ clang++ -std=c++11 -Wall -pedantic -pthread main.cpp
main.cpp:22:1: error: missing 'typename' prior to dependent type name 'myClass<i>::myVector_t'
myClass<i>::myVector_t  myClass<i>::myFunc()        //<----- Line 10
^~~~~~~~~~~~~~~~~~~~~~
typename 
1 error generated.
